Switched to records, fixed and improved command.