@@ -1,84 +1,99 @@
 package io.github.endergamerhun.deathhistory.inventory;
 
-import io.github.endergamerhun.deathhistory.events.PlayerDeath;
-import org.bukkit.Bukkit;
+import dev.triumphteam.gui.builder.item.ItemBuilder;
+import dev.triumphteam.gui.guis.Gui;
+import dev.triumphteam.gui.guis.GuiItem;
+import io.github.endergamerhun.deathhistory.events.DeathManager;
+import io.github.endergamerhun.deathhistory.utils.DeathRecord;
+import net.kyori.adventure.text.Component;
 import org.bukkit.Location;
 import org.bukkit.Material;
-import org.bukkit.OfflinePlayer;
-import org.bukkit.inventory.Inventory;
-import org.bukkit.inventory.InventoryHolder;
+import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
-import org.bukkit.profile.PlayerProfile;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.UUID;
 
-public class DeathInventory implements InventoryHolder {
+public class DeathInventory {
 
-    private final Inventory inv;
-    private final PlayerProfile player;
-
-
-    public DeathInventory(OfflinePlayer p) {
-        this(p.getPlayerProfile());
-    }
-    public DeathInventory(PlayerProfile profile) {
-        player = profile;
-
-        inv = Bukkit.createInventory(this, 5*9, "§6Death History of §e" + profile.getName());
-
-        ItemStack filler = createItem(Material.GRAY_STAINED_GLASS_PANE, "§f");
-
+    public static void openMain(Player player, DeathRecord record) {
+        Gui gui = Gui.gui().title(Component.text("")).rows(5).create();
+        GuiItem filler = new GuiItem(ItemBuilder.from(Material.GRAY_STAINED_GLASS_PANE).name(Component.text("§f")).build(), event -> event.setCancelled(true));
         for (int i = 0; i < 5 * 9; i++) {
-            inv.setItem(i, filler);
+            gui.setItem(i, filler);
         }
 
-        refresh();
-    }
-
-    public void refresh() {
         ItemStack skull = new ItemStack(Material.PLAYER_HEAD);
         SkullMeta meta = (SkullMeta) skull.getItemMeta();
         assert meta != null;
-        meta.setOwnerProfile(player);
+        meta.setOwningPlayer(record.player());
         meta.setDisplayName("§e" + player.getName());
         skull.setItemMeta(meta);
 
-        inv.setItem(4, skull);
+        gui.setItem(4, new GuiItem(skull, event -> event.setCancelled(true)));
+        gui.setItem(20, ItemBuilder.from(Material.HOPPER).name(Component.text("§eCollect Items")).lore(List.of(Component.text(" §7Click to Collect"))).asGuiItem(event -> {
+            event.setCancelled(true);
+            if (event.getWhoClicked() instanceof Player p) {
+                for (ItemStack i : record.drops()) {
+                    p.getInventory().addItem(i);
+                }
+                p.sendMessage("§aItems received!");
+            }
+        }));
+        gui.setItem(21, ItemBuilder.from(Material.EMERALD).name(Component.text("§eCollect EXP")).lore(List.of(Component.text("§7 Click to Collect"))).asGuiItem(event -> {
+            event.setCancelled(true);
+            if (event.getWhoClicked() instanceof Player p) {
+                p.giveExp(record.exp());
+            }
+        }));
+        gui.setItem(29, ItemBuilder.from(Material.ENDER_PEARL).name(Component.text("§eTeleport to location")).lore(List.of(Component.text("§7 Click to Teleport"))).asGuiItem(event -> {
+            event.setCancelled(true);
+            if (event.getWhoClicked() instanceof Player p) {
+                p.teleport(record.location());
+            }
+        }));
+        gui.setItem(30, ItemBuilder.from(Material.TNT).name(Component.text("§cDelete Save")).lore(List.of(Component.text("§7 Click to §7§lDELETE"))).asGuiItem(event -> {
+            event.setCancelled(true);
+            DeathManager.removeRecord(record);
+            player.sendMessage("§aRecord deleted!");
+            gui.close(player);
+        }));
 
-        inv.setItem(20, createItem(Material.HOPPER, "§eCollect Items", Arrays.asList("","§7Click to collect")));
-        inv.setItem(21, createItem(Material.EMERALD, "§eCollect EXP", Arrays.asList("","§7Click to collect")));
-        inv.setItem(29, createItem(Material.ENDER_PEARL, "§eTeleport to location", Arrays.asList("","§7Click to teleport")));
-        inv.setItem(30, createItem(Material.TNT, "§cDelete save", Arrays.asList("","§7Click to DELETE")));
+        gui.setItem(23, ItemBuilder.from(Material.CHEST).name(Component.text("§bInspect Drops")).lore(List.of(Component.text("§7 Click to View"))).asGuiItem(event -> {
+            event.setCancelled(true);
+            openStored(player, record);
+        }));
+        gui.setItem(24, ItemBuilder.from(Material.EXPERIENCE_BOTTLE).name(Component.text("§bDropped EXP:")).lore(List.of(Component.text("§e " + record.exp()))).asGuiItem(event -> event.setCancelled(true)));
+        Location loc = record.location();
+        gui.setItem(32, ItemBuilder.from(Material.OAK_SIGN).name(Component.text("§bLocation")).lore(List.of(
+                Component.text(" §7X: §e" + loc.getBlockX()),
+                Component.text(" §7Y: §e" + loc.getBlockY()),
+                Component.text(" §7Z: §e" + loc.getBlockZ())
+        )).asGuiItem(event -> event.setCancelled(true)));
+        gui.setItem(33, ItemBuilder.from(Material.CLOCK).name(Component.text("§bTime:")).lore(List.of(Component.text("§e " + record.time().toString()))).asGuiItem(event -> event.setCancelled(true)));
 
-        final UUID uuid = player.getUniqueId();
-
-        inv.setItem(23, createItem(Material.CHEST, "§dInspect Drops", Arrays.asList("","§7Click to View")));
-        inv.setItem(24, createItem(Material.EXPERIENCE_BOTTLE, "§Dropped EXP:", Arrays.asList("", "§7" + PlayerDeath.getExp(uuid))));
-        Location loc = PlayerDeath.getLocation(uuid);
-        inv.setItem(32, createItem(Material.OAK_SIGN, "§dLocation:", Arrays.asList("§7X: " + loc.getBlockX(), "§7Y: " + loc.getBlockY(), "§7Z: " + loc.getBlockZ())));
-        inv.setItem(33, createItem(Material.CLOCK, "§dTime:", Arrays.asList("", "§7" + PlayerDeath.getTime(uuid).toString())));
+        gui.open(player);
     }
 
+    public static void openStored(Player player, DeathRecord record) {
+        Gui gui = Gui.gui().title(Component.text("")).rows(5).create();
+        GuiItem filler = new GuiItem(ItemBuilder.from(Material.GRAY_STAINED_GLASS_PANE).name(Component.text("§f")).build(), event -> event.setCancelled(true));
 
-    private ItemStack createItem(Material mat, String name) {
-        return createItem(mat, name, null);
-    }
-    private ItemStack createItem(Material mat, String name, List<String> lore) {
-        ItemStack item = new ItemStack(mat);
-        ItemMeta meta = item.getItemMeta();
-        assert meta != null;
-        meta.setDisplayName(name);
-        meta.setLore(lore);
-        item.setItemMeta(meta);
-        return item;
-    }
+        for (int i = 0; i < 5 * 9; i++) {
+            gui.setItem(i, filler);
+        }
 
-    @Override
-    public Inventory getInventory() {
-        return inv;
+        for (int i = 2; i < 5; i++) {
+            for (int j = 2; j < 9; j++) {
+                gui.removeItem(i, j);
+            }
+        }
+
+        List<ItemStack> drops = record.drops();
+        for (int i = 0; i < drops.size(); i++) {
+            gui.setItem((int) (2 + Math.floor(i/7f)), 2 + i % 7, new GuiItem(drops.get(i).clone()));
+        }
+
+        gui.open(player);
     }
 }
